k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-app
  template:
    metadata:
      labels:
        app: grpc-app
    spec:
      containers:
        - name: grpc-server
          image: grpc-ecommerce:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 50051
